--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,18 +5,27 @@ spring.application.name=runnerz
 #spring.datasource.generate-unique-name=false
 #sping.datasource.name=runnerz
 
-# postgres configuration
-spring.datasource.name=runnerz
-spring.datasource.url=jdbc:postgresql://localhost:5432/runnerz
+# postgres configuration if postman running on your local machine
+# spring.datasource.name=runnerz
+# spring.datasource.url=jdbc:postgresql://localhost:5432/runnerz
+# spring.datasource.username=postgres
+# spring.datasource.password=michael1996
+# spring.datasource.driver-class-name=org.postgresql.Driver
+# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# docker configuration for postgres
+spring.datasource.url=jdbc:postgresql://database:5432/runnerz
 spring.datasource.username=postgres
 spring.datasource.password=michael1996
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+
+# run schema.sql 
+spring.sql.init.mode=always
 
 # port 8081
 server.port=8081
 
 
 
-# run schema.sql
-spring.sql.init.mode=always
